jablonski/templates/vce-app-editor2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jablonski-vce-app-editor2-deployment
  namespace: jablonski
  labels:
    app: jablonski-vce-app-editor2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jablonski-vce-app-editor2
  template:
    metadata:
      labels:
        app: jablonski-vce-app-editor2
    spec:
      volumes:
      - name: jablonski-vce-app-editor2-nfs-volume
        persistentVolumeClaim:
          claimName: jablonski-vce-app-editor2-nfs-pvc # name of pvc
      containers:
      - name: jablonski-vce-app-editor2-container
        image: uvarc/vce-app-editor:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: jablonski-vce-app-editor2-nfs-volume
          mountPath: /project/DSone/jaj4zcf/Videos/write # mount inside of container
#        env:
#        - name:
#          value: ""
        resources:
          requests:
            memory: "1050Mi"
            cpu: "0.5"
          limits:
            memory: "2050Mi"
            cpu: "1"
